--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appBackground"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="110dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@android:color/black"
+        android:background="@drawable/round_dice_roll_button"
         android:onClick="onD8Roll"
         android:text="Roll D8"
         android:textColor="@android:color/white"
@@ -26,7 +27,7 @@
         android:id="@+id/button5"
         android:layout_width="110dp"
         android:layout_height="100dp"
-        android:background="@android:color/black"
+        android:background="@drawable/round_dice_roll_button"
         android:onClick="onD6Roll"
         android:text="Roll D6"
         android:textColor="@android:color/white"
@@ -42,7 +43,7 @@
         android:id="@+id/button4"
         android:layout_width="110dp"
         android:layout_height="100dp"
-        android:background="@android:color/black"
+        android:background="@drawable/round_dice_roll_button"
         android:onClick="onD10Roll"
         android:text="Roll D10"
         android:textColor="@android:color/white"
@@ -55,13 +56,13 @@
         app:layout_constraintVertical_bias="0.379" />
 
     <Button
-        android:background="@android:color/black"
-        android:textColor="@android:color/white"
         android:id="@+id/button3"
         android:layout_width="110dp"
         android:layout_height="100dp"
+        android:background="@drawable/round_dice_roll_button"
         android:onClick="onD12Roll"
         android:text="Roll D12"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +75,7 @@
         android:id="@+id/button"
         android:layout_width="110dp"
         android:layout_height="100dp"
-        android:background="@android:color/black"
+        android:background="@drawable/round_dice_roll_button"
         android:onClick="onD20Roll"
         android:text="Roll D20"
         android:textColor="@android:color/white"
@@ -90,7 +91,7 @@
         android:id="@+id/button7"
         android:layout_width="110dp"
         android:layout_height="100dp"
-        android:background="@android:color/black"
+        android:background="@drawable/round_dice_roll_button"
         android:onClick="onD4Roll"
         android:text="Roll D4"
         android:textColor="@android:color/white"
@@ -102,19 +103,56 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.669" />
 
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="317dp"
+        android:layout_height="123dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/transparent"
+        android:onClick="clearResField"
+        android:text=""
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewResField"
+        app:layout_constraintVertical_bias="0.916" />
+
     <TextView
         android:id="@+id/textViewResField"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
-        android:background="@null"
-        android:gravity="center"
-        android:layout_width="171dp"
-        android:layout_height="73dp"
+        android:layout_width="314dp"
+        android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@null"
         android:ems="10"
+        android:gravity="center"
         android:text="@string/generic_res"
+        android:textColor="@android:color/white"
+        android:textSize="32dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.878" />
+
+    <TextView
+        android:id="@+id/textViewResTallyField"
+        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        android:layout_width="316dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:ems="10"
+        android:gravity="center"
         android:textSize="32dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +160,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89" />
+        app:layout_constraintVertical_bias="0.983" />
 
 
 </android.support.constraint.ConstraintLayout>
